Use built-in Base64 encoder (#352)